# ads

./: .gitignore  README.md  zagadnienia.md
ads2-zestaw0/: CMakeLists.txt  CmakeLists_bckp.txt
ads2-zestaw0/scripts/: plot_const.py  plot_linear.py
ads2-zestaw0/src/: main.cpp  simple_set.cpp  simple_set.hpp
ads2-zestaw0/src/bench/: bench.cpp
ads2-zestaw1/: CMakeLists.txt  ss.out
ads2-zestaw1/scripts/: b_plot_element.py  b_plot_linear.py  d_plot_element.py  string_set_benchmarks.csv
ads2-zestaw1/src/: list_set.cpp  list_set.hpp  list_set_tests.cpp  ordered_ll.hpp  string_set.cpp
ads2-zestaw1/src/B/: list_set.hpp  list_set_tests.cpp
ads2-zestaw1/src/B/benchmark/: bench.cpp
ads2-zestaw1/src/D/: string_set.hpp  string_set_test.cpp
ads2-zestaw1/src/D/benchmark/: bench.cpp
ads2-zestaw2/: CMakeLists.txt
ads2-zestaw2/src/: even_set.hpp
ads2-zestaw2/src/A/: custom_set.hpp  main.cpp  simple_set.cpp
ads2-zestaw2/src/B/: list_set.cpp  list_set.hpp  main.cpp  ordered_ll.hpp  set_hashed.hpp  set_hashed_benchmark.cpp
ads2-zestaw3/: CMakeLists.txt
ads2-zestaw3/A/: list_set.hpp  ordered_ll.hpp  pq_tests.cpp  set_pq.hpp  set_pq_bench.cpp
ads2-zestaw3/B/: binary_pq.hpp  binary_pq_bench.cpp  binary_pq_tests.cpp  main.cpp
ads2-zestaw3/scripts/: a_plot_insert.py  b_plot_avg_insert.py  b_plot_insert_remove.py  binary_pq_benchmarks.csv  set_pq_benchmarks.csv
ads2-zestaw4/: CMakeLists.txt
ads2-zestaw4/src/: main.cpp  matrix_graph.hpp
zestaw-template/: Makefile
zestaw-template/src/: main.cpp
zestaw10/: Makefile  README.md
zestaw10/src/: main.cpp  tree.hpp
zestaw2/: Makefile  README.md
zestaw2/src/: main.cpp  mergesort.hpp  quicksort.hpp
zestaw3/: Makefile  README.md
zestaw3/src/: arraylist.hpp  main.cpp
zestaw4/: Makefile  README.md
zestaw4/src/: main.cpp  singlelist.hpp
zestaw5/: Makefile  README.md
zestaw5/src/: main.cpp
zestaw6/: Makefile  README.md
zestaw6/src/: doublelist.hpp  list_deque.hpp  main.cpp  vector_deque.hpp
zestaw7/: Makefile  README.md
zestaw7/src/: main.cpp
zestaw8/: Makefile  README.md
zestaw8/src/: main.cpp  queue.hpp
zestaw9/: Makefile  README.md
zestaw9/src/: main.cpp  tree.hpp
